messed up CSS. organized code so large blocks are in functions. fixed rightClickFlag() so it doesn't click on visible squares

--- a/Module 1 Project - Minesweeper/styles/style.css
+++ b/Module 1 Project - Minesweeper/styles/style.css
@@ -80,27 +80,26 @@ p#minesweeper{
 
 #main-body{
     border:2px solid purple;
-    width:60%;
-    height:50%;
-    margin-top:2%;
+    width:80%;
+    height:48%;
+    margin-top:4%;
     display:flex;
     flex-flow: row nowrap;
     justify-content: center;
 }
 #main-container{
-    /* border:2px solid red; */
+    border:2px solid red;
     box-shadow:1px 2px 8px 2px black;
     background-color: rgb(196, 191, 191);
-    width:40%;
+    width:50%;
     height:50%;
     display:flex;
     flex-flow: column nowrap;
     display: relative;
-    margin-top:1.5%;
 }
 
 #game-heading{
-    /* border:1px solid blue; */
+    border:1px solid blue;
     width:100%;
     height:5%;
     padding:2% 4% 1% 4%;
@@ -137,7 +136,7 @@ p#minesweeper{
     padding:0;
     margin:1%;
     width:100%;
-    height: 90%;
+    height: 100%;
     border:none;
     background: none;
     outline: none;
@@ -150,12 +149,6 @@ p#minesweeper{
     box-shadow: 0px 0px 2px 3px rgb(82, 80, 80);
     outline:none;
 }
-
-#dead-smiley{
-    width:85%;
-    height: 85%;
-}
-
 
 
 #main-grid{
@@ -207,7 +200,7 @@ button{
 .bombs, .flags {
     /* border:1px solid black; */
     width:100%;
-    height:85%;
+    height:100%;
     position: relative;
 }
 
@@ -217,7 +210,7 @@ button{
     width: 100%;
     height: 100%;
     text-align: center;
-    font-size:1.8vw;
+    font-size:1.5vw;
     padding:10%;
     font-family:monospace;
     font-weight: bold;
@@ -259,4 +252,3 @@ button{
 /* IMAGES */
 /* flag - https://www.google.com/logos/fnbx/minesweeper/flag_icon.png */
 /* bomb - https://esraa-alaarag.github.io/Minesweeper/images/bomb.png */
-/* dead - https://cdn3.iconfinder.com/data/icons/emoji-63/32/emoticon-16-512.png */
